# PowerPaste

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  codeql.yml  e2e-mac.yml  e2e-tests.yml  release.yml
docs/: LOGO.md
powerpaste/: README.md  package.json
powerpaste/src/: App.css  api.ts
powerpaste/src-tauri/: Cargo.toml
powerpaste/src-tauri/src/: main.rs  models.rs  paths.rs
scripts/: generate-icons.sh
src/: App.css  App.test.tsx  App.tsx  api.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  db.rs  lib.rs  models.rs  paths.rs  settings_store.rs  sync.rs
src-tauri/src/migrations/: mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: AppIcon.tsx  BottomTray.tsx  ContentPreview.tsx  ContentPreviewHelpers.tsx  PermissionsModal.tsx  PowerPasteLogo.tsx  SaveToPinboardModal.tsx  SaveToTabModal.tsx  SettingsModal.tsx  index.ts
src/hooks/: useAutoHideScrollbar.ts  useDominantColor.ts  useSystemAccentColor.ts
src/test/: setup.ts
src/utils/: contentPreview.ts  format.ts  index.ts
tests/e2e/: tsconfig.json
tests/e2e/appium/: wdio.mac.conf.ts  wdio.windows.conf.ts
tests/e2e/appium/helpers/: capabilities.ts  ciConfig.ts  index.ts  portManager.ts  selectors.ts  testDb.ts
tests/e2e/appium/scripts/: run-mac-tests.sh  start-wda-mac.sh  stop-wda-mac.sh
tests/e2e/appium/specs/mac/: hotkey.spec.ts  launch.spec.ts  overlay.spec.ts  permissions-dialog.spec.ts  ui-interactions.spec.ts
tests/e2e/appium/specs/shared/: window-behavior.spec.ts
tests/e2e/appium/specs/windows/: hotkey.spec.ts  launch.spec.ts
tests/e2e/playwright/: playwright.config.ts
tests/e2e/playwright/fixtures/: global-setup.ts  global-teardown.ts  tauri.fixture.ts
tests/e2e/playwright/specs/: clipboard-list.spec.ts  multi-select.spec.ts  search.spec.ts  settings.spec.ts  tabs.spec.ts
