[package]
name = "powerpaste"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "powerpaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
argon2 = "0.5"
arboard = "3"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
keyring = "3"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"
core-graphics = "0.25.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["exception"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSApplication", "NSRunningApplication", "NSPanel", "NSView", "NSGraphics", "NSResponder", "NSEvent", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "objc2-core-foundation", "NSString"] }
block2 = "0.6"

